--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <script src="assets/js/persistence/tabsPersistence.js"></script>
     <script src="assets/js/persistence/mutationObserver.js"></script>
+    <script src="assets/js/persistence/accordionPersistence.js"></script>
 
     <script src="assets/js/libs/bootstrap.bundle.min.js"></script>
     <script src="assets/js/libs/jquery.js"></script>
@@ -162,7 +163,7 @@
                             <a class="nav-link" id="general-tooling-hash-tab" data-bs-toggle="tab"
                                href="#hashing" role="tab">
                                 <img data-bs-toggle="tooltip"
-                                     data-bs-placement="right" title="Hash generator and identifier"
+                                     data-bs-placement="right" title="Hash generator & identifier"
                                      src="assets/icons/navbar/tab-1-gen-tooling/hashing.png"
                                      width="25px" height="25px;">
                             </a>
@@ -477,7 +478,7 @@
                                     <div class="d-flex justify-content-between rounded border h-100">
                                         <pre class="p-0 w-100 h-100"
                                              id="general-tooling-code-highlighter-output-pre"><code
-                                                class="p-2 language-plaintext rounded"
+                                                class="p-2 language-plaintext rounded h-100"
                                                 style="white-space: pre-wrap;"></code></pre>
                                         <a href="#" class="d-flex flex-column justify-content-end" style="width: 6%">
 
@@ -1427,19 +1428,69 @@
                                             Windows privilege escalation checklist (general)
                                         </h6>
 
-                                        <div class="d-flex flex-column justify-content-between h-100">
-                                            <table class="table table-responsive-sm table-hover table-striped">
-                                                <thead>
-                                                <th>Check</th>
-                                                </thead>
-                                                <tbody id="windows-general-privesc-checklist">
-                                                </tbody>
-                                            </table>
+                                        <div id="checklist-assistant-windows-privesc-accordion">
+
                                         </div>
+
+<!--                                        &lt;!&ndash; checklist accordion START &ndash;&gt;-->
+<!--                                        <div class="accordion" id="accordionExample">-->
+<!--                                            <div class="accordion-item">-->
+<!--                                                <h2 class="accordion-header" id="headingOne">-->
+<!--                                                    <button class="accordion-button collapsed" type="button"-->
+<!--                                                            data-bs-toggle="collapse" data-bs-target="#collapseOne"-->
+<!--                                                            aria-expanded="false" aria-controls="collapseOne">-->
+<!--                                                        Accordion Item #1-->
+<!--                                                    </button>-->
+<!--                                                </h2>-->
+<!--                                                <div id="collapseOne" class="accordion-collapse collapse"-->
+<!--                                                     aria-labelledby="headingOne" data-bs-parent="#accordionExample">-->
+<!--                                                    <div class="accordion-body">-->
+<!--                                                        Content for the first accordion item. This is some placeholder-->
+<!--                                                        content for the accordion. You can use this space to describe-->
+<!--                                                        your content.-->
+<!--                                                    </div>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                            <div class="accordion-item">-->
+<!--                                                <h2 class="accordion-header" id="headingTwo">-->
+<!--                                                    <button class="accordion-button collapsed" type="button"-->
+<!--                                                            data-bs-toggle="collapse" data-bs-target="#collapseTwo"-->
+<!--                                                            aria-expanded="false" aria-controls="collapseTwo">-->
+<!--                                                        Accordion Item #2-->
+<!--                                                    </button>-->
+<!--                                                </h2>-->
+<!--                                                <div id="collapseTwo" class="accordion-collapse collapse"-->
+<!--                                                     aria-labelledby="headingTwo" data-bs-parent="#accordionExample">-->
+<!--                                                    <div class="accordion-body">-->
+<!--                                                        Content for the second accordion item. This is another piece of-->
+<!--                                                        placeholder content for the accordion. You can use this space to-->
+<!--                                                        describe your content.-->
+<!--                                                    </div>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                            <div class="accordion-item">-->
+<!--                                                <h2 class="accordion-header" id="headingThree">-->
+<!--                                                    <button class="accordion-button collapsed" type="button"-->
+<!--                                                            data-bs-toggle="collapse" data-bs-target="#collapseThree"-->
+<!--                                                            aria-expanded="false" aria-controls="collapseThree">-->
+<!--                                                        Accordion Item #3-->
+<!--                                                    </button>-->
+<!--                                                </h2>-->
+<!--                                                <div id="collapseThree" class="accordion-collapse collapse"-->
+<!--                                                     aria-labelledby="headingThree" data-bs-parent="#accordionExample">-->
+<!--                                                    <div class="accordion-body">-->
+<!--                                                        Content for the third accordion item. This is yet another piece-->
+<!--                                                        of placeholder content for the accordion. You can use this space-->
+<!--                                                        to describe your content.-->
+<!--                                                    </div>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                        &lt;!&ndash; checklist accordion END&ndash;&gt;-->
+
 
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -1535,7 +1586,7 @@
 <!-- CLASSES END-->
 
 <!-- TABS START -->
-<script src="assets/js/tabs/tab-1-general-tooling/tab-1-tooling.js"></script>
+<script src="assets/js/tabs/tab-1-general-tooling/tab-1-general-tooling.js"></script>
 <script src="assets/js/tabs/tab-2-enum-tooling/tab-2-enum-tooling.js"></script>
 <script src="assets/js/tabs/tab-3-exploit-assistant/tab-3-exploit-assistant.js"></script>
 <script src="assets/js/tabs/tab-4-shell-assistant/shells.js"></script>
